Refactor: Intro Screen and GameScreen - Refactored classes - Implemented abstractView - Follows generalized view structure