@@ -3,30 +3,33 @@ package edu.ntnu.idi.idatt.view.common;
 import edu.ntnu.idi.idatt.controller.common.GameScreenController;
 import edu.ntnu.idi.idatt.model.common.Player;
 import edu.ntnu.idi.idatt.model.model_observers.GameScreenObserver;
+import edu.ntnu.idi.idatt.view.AbstractView;
+import edu.ntnu.idi.idatt.view.snakesandladders.SalBoardView;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.*;
+import javafx.stage.Modality;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.List;
 
-public class GameScreenView implements GameScreenObserver {
+public class GameScreenView extends AbstractView implements GameScreenObserver {
   private static final Logger logger = LoggerFactory.getLogger(GameScreenView.class);
 
   private final GameScreenController controller;
-  private final BorderPane root;
 
-  private BoardView boardView;
+  private SalBoardView salBoardView;
   private Label currentPlayerLabel;
   private ImageView currentPlayerImageView;
   private Label diceResultLabel;
   private Label positionLabel;
   private Button rollButton;
-
+  private Button backButton;
+  private Button saveButton;
   private Label player1TurnLabel;
   private Label player2TurnLabel;
   private Label player3TurnLabel;
@@ -34,27 +37,72 @@ public class GameScreenView implements GameScreenObserver {
 
   public GameScreenView(GameScreenController controller) {
     this.controller = controller;
-    this.root = new BorderPane();
     controller.registerObserver(this);
-    initialize();
   }
 
-  private void initialize() {
+  @Override
+  protected void createUI() {
+    BorderPane mainContainer = new BorderPane();
+
+    // Initialize player position labels
+    initializePlayerLabels();
+
+    // Create the game board view
+    createBoardView();
+
+    // Create the right panel with player info and controls
+    BorderPane rightPanel = createRightPanel();
+
+    // Combine board and right panel in main content
+    HBox mainContent = createMainContent(rightPanel);
+
+    mainContainer.setCenter(mainContent);
+    root = mainContainer;
+  }
+
+  private void initializePlayerLabels() {
     player1TurnLabel = new Label();
     player2TurnLabel = new Label();
     player3TurnLabel = new Label();
     player4TurnLabel = new Label();
+  }
 
+  private void createBoardView() {
     List<Player> players = controller.getPlayers();
-    boardView = new BoardView(controller.getBoard(), players);
+    salBoardView = new SalBoardView(controller.getBoard(), players);
+  }
 
+  private BorderPane createRightPanel() {
+    // Create the top section with current player info
+    HBox topRightInfo = createCurrentPlayerInfoSection();
+
+    // Create the center section with player grid
+    VBox playerSection = createPlayerSection();
+
+    // Create the bottom section with control buttons
+    HBox buttonBox = createControlButtonsSection();
+
+    // Combine all sections in the right panel
+    BorderPane rightPanel = new BorderPane();
+    rightPanel.setTop(topRightInfo);
+    rightPanel.setCenter(playerSection);
+    rightPanel.setBottom(buttonBox);
+    rightPanel.setPrefWidth(300);
+
+    return rightPanel;
+  }
+
+  private HBox createCurrentPlayerInfoSection() {
+    // Create current player label
     currentPlayerLabel = new Label("Current turn: ");
     currentPlayerLabel.setStyle("-fx-font-size: 20px; -fx-font-weight: bold;");
     currentPlayerLabel.setMinWidth(150);
 
+    // Create dice result and position labels
     diceResultLabel = new Label("Roll result: -");
     positionLabel = new Label("Position: -");
 
+    // Create current player image
     String characterName = controller.getCurrentPlayer().getCharacter();
     if (characterName == null || characterName.isEmpty()) {
       characterName = "Unknown-Player";
@@ -62,51 +110,72 @@ public class GameScreenView implements GameScreenObserver {
     Image currentPlayerImage = new Image("PlayerIcons/" + characterName + ".png", 150, 150, true, true);
     currentPlayerImageView = new ImageView(currentPlayerImage);
 
-    rollButton = new Button("Roll Dice");
-    rollButton.setStyle("-fx-font-size: 12px;");
-    rollButton.setOnAction(e -> controller.handleRoll());
+    // Combine elements in a hbox
+    HBox topRightInfo = new HBox(60, currentPlayerLabel, currentPlayerImageView);
+    topRightInfo.setAlignment(Pos.CENTER_LEFT);
+    topRightInfo.setPadding(new Insets(20, 10, 0, 10));
 
-    Button backButton = new Button("Back");
-    backButton.setStyle("-fx-font-size: 12px;");
-    backButton.setOnAction(e -> controller.navigateBack());
+    return topRightInfo;
+  }
 
-    Button saveButton = new Button("Save Game");
-    saveButton.setStyle("-fx-font-size: 12px;");
-    saveButton.setOnAction(e -> controller.saveGame());
-
+  private VBox createPlayerSection() {
+    // Create player section header
     Label playerLabel = new Label("Players");
     playerLabel.setStyle("-fx-font-size: 20px; -fx-font-weight: bold;");
     playerLabel.setAlignment(Pos.CENTER);
     playerLabel.setMaxWidth(Double.MAX_VALUE);
 
+    // Create player grid with all players
     GridPane playerGrid = createPlayerGrid(controller.getPlayers(), controller.getCharacterNames());
 
-    HBox topRightInfo = new HBox(60, currentPlayerLabel, currentPlayerImageView);
-    topRightInfo.setAlignment(Pos.CENTER_LEFT);
-    topRightInfo.setPadding(new Insets(20, 10, 0, 10));
+    // Combine elements in a vbox
+    VBox playerSection = new VBox(20, playerLabel, playerGrid);
+    playerSection.setAlignment(Pos.TOP_CENTER);
+    playerSection.setPadding(new Insets(150, 0, 0, 0));
 
-    VBox playerLabelBox = new VBox(20, playerLabel, playerGrid);
-    playerLabelBox.setAlignment(Pos.TOP_CENTER);
-    playerLabelBox.setPadding(new Insets(150, 0, 0, 0));
+    return playerSection;
+  }
 
+  private HBox createControlButtonsSection() {
+    // Create back button
+    backButton = new Button("Back");
+    backButton.setStyle("-fx-font-size: 12px;");
+
+    // Create roll dice button
+    rollButton = new Button("Roll Dice");
+    rollButton.setStyle("-fx-font-size: 12px;");
+
+    // Create save game button
+    saveButton = new Button("Save Game");
+    saveButton.setStyle("-fx-font-size: 12px;");
+
+    // Combine buttons in a hbox
     HBox buttonBox = new HBox(20, backButton, rollButton, saveButton);
     buttonBox.setAlignment(Pos.BOTTOM_CENTER);
     buttonBox.setPadding(new Insets(10));
 
-    BorderPane rightColumn = new BorderPane();
-    rightColumn.setTop(topRightInfo);
-    rightColumn.setCenter(playerLabelBox);
-    rightColumn.setBottom(buttonBox);
-    rightColumn.setPrefWidth(300);
+    return buttonBox;
+  }
 
-    HBox mainContent = new HBox(40, boardView, rightColumn);
+  private HBox createMainContent(BorderPane rightPanel) {
+    HBox mainContent = new HBox(40, salBoardView.getRoot(), rightPanel);
     mainContent.setAlignment(Pos.CENTER_LEFT);
     mainContent.setPadding(new Insets(20));
+    return mainContent;
+  }
 
-    root.setCenter(mainContent);
+  @Override
+  protected void setupEventHandlers() {
+    rollButton.setOnAction(e -> controller.handleRoll());
+    backButton.setOnAction(e -> controller.navigateBack());
+    saveButton.setOnAction(e -> controller.saveGame());
+  }
 
+  @Override
+  protected void applyInitialUIState() {
     updatePlayerTurnLabels();
     updateCurrentPlayerView(controller.getCurrentPlayer());
+    salBoardView.show();
   }
 
   private GridPane createPlayerGrid(List<Player> players, List<String> characterNames) {
@@ -115,9 +184,15 @@ public class GameScreenView implements GameScreenObserver {
     playerGrid.setVgap(60);
     playerGrid.setAlignment(Pos.CENTER);
 
-    if (players.size() >= 1) {
-      Player player1 = players.get(0);
-      String player1Character = !characterNames.isEmpty() ? characterNames.get(0) : "default";
+    addPlayersToGrid(playerGrid, players, characterNames);
+
+    return playerGrid;
+  }
+
+  private void addPlayersToGrid(GridPane playerGrid, List<Player> players, List<String> characterNames) {
+    if (!players.isEmpty()) {
+      Player player1 = players.getFirst();
+      String player1Character = !characterNames.isEmpty() ? characterNames.getFirst() : "default";
       VBox player1Box = createPlayerBox(player1, player1Character, player1TurnLabel);
       playerGrid.add(player1Box, 0, 0);
     }
@@ -142,8 +217,6 @@ public class GameScreenView implements GameScreenObserver {
       VBox player4Box = createPlayerBox(player4, player4Character, player4TurnLabel);
       playerGrid.add(player4Box, 1, 1);
     }
-
-    return playerGrid;
   }
 
   private VBox createPlayerBox(Player player, String characterName, Label positionLabel) {
@@ -160,8 +233,8 @@ public class GameScreenView implements GameScreenObserver {
   private void updatePlayerTurnLabels() {
     List<Player> players = controller.getPlayers();
 
-    if (players.size() >= 1) {
-      player1TurnLabel.setText(String.valueOf(players.get(0).getPosition()));
+    if (!players.isEmpty()) {
+      player1TurnLabel.setText(String.valueOf(players.getFirst().getPosition()));
     }
 
     if (players.size() >= 2) {
@@ -189,17 +262,9 @@ public class GameScreenView implements GameScreenObserver {
     currentPlayerImageView.setImage(currentPlayerImage);
   }
 
-  public void show() {
-    controller.displayGameScreen(this);
-  }
-
-  public BorderPane getRoot() {
-    return root;
-  }
-
   @Override
   public void onPlayerPositionChanged(Player player, int oldPosition, int newPosition) {
-    boardView.render();
+    salBoardView.render();
     updatePlayerTurnLabels();
 
     if (player.equals(controller.getCurrentPlayer())) {
@@ -225,6 +290,10 @@ public class GameScreenView implements GameScreenObserver {
     alert.setTitle("Game Over");
     alert.setHeaderText("🎉 " + winner.getName() + " has won the game!");
     alert.setContentText("Final position: " + winner.getPosition());
+    alert.setGraphic(new ImageView(new Image("PlayerIcons/" + winner.getCharacter() + ".png", 100, 100, true, true)));
+
+    alert.initOwner(root.getScene().getWindow());
+    alert.initModality(Modality.APPLICATION_MODAL);
     alert.showAndWait();
     rollButton.setDisable(true);
   }
